different classes instead all in main

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,10 @@ FetchContent_Declare(SFML
         SYSTEM)
 FetchContent_MakeAvailable(SFML)
 
-add_executable(seasons main.cpp)
+add_executable(seasons main.cpp game.cpp game.h
+        Player.cpp
+        Player.h
+        Map.cpp
+        Map.h)
 target_compile_features(seasons PRIVATE cxx_std_17)
 target_link_libraries(seasons PRIVATE SFML::Graphics)
