--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,9 @@ add_executable(seasons main.cpp game.cpp game.h
         Map.h
         Platform.cpp
         Platform.h
+        Factory.cpp
+        Factory.h
+        Factory.h
 )
 target_compile_features(seasons PRIVATE cxx_std_17)
 target_link_libraries(seasons PRIVATE SFML::Graphics)
